# object_follower

./: README.md
scripts/: ar_detect.py  ar_detect_with_kf.py  ar_pose_estimation.py  init_ur5_pose.py  pid.py  track_marker.py  wheely_robot_controller.py
ur5/: package.xml
ur5/config/: controller.yaml
ur5/launch/: gazebo.launch  rviz.launch  sim_gazebo.launch
ur5/rviz/: urdf.rviz
ur5/urdf/: ur5.urdf  ur5_og_well_edited.urdf  ur5_sandbox.urdf
ur5_moveit_package/: CMakeLists.txt  package.xml
ur5_moveit_package/config/: custom_ros_controller.yaml  fake_controllers.yaml  ompl_planning.yaml  ros_controllers.yaml  ur5.srdf
ur5_moveit_package/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  full_robot_arm_sim.launch  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  sim.launch  trajectory_execution.launch.xml  ur5_moveit_controller_manager.launch.xml  warehouse.launch
wheely_robot/: CMakeLists.txt  package.xml
wheely_robot/launch/: display.launch  gazebo.launch
wheely_robot/meshes/: ar_2020_v2.dae
wheely_robot/urdf/: inertial_macros.xacro  materials.xacro  wheely.gazebo  wheely.xacro
