<package format="2">
  <name>ur5</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for UR5 Robot Arm</p>
    <p>This package contains configuration data, 3D models and launch files
for UR5 robot</p>
  </description>
  <author>Ritesh Gole</author>
  <maintainer email="ritesh27gole@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>
